option('enable_tests', type: 'boolean', value: true, description: 'Build Tier 0 bootstrap tests')
option('enable_frontend_assets', type: 'boolean', value: true, description: 'Install bundled frontend assets')
option('build_deb', type: 'boolean', value: false, description: 'Add a `deb` packaging target')
option('build_rpm', type: 'boolean', value: false, description: 'Add an `rpm` packaging target')
option('build_pacman', type: 'boolean', value: false, description: 'Add a `pacman` packaging target')
option('package_deb', type: 'boolean', value: false, description: 'Keep DEB packaging support declared in the build metadata')
option('package_rpm', type: 'boolean', value: false, description: 'Keep RPM packaging support declared in the build metadata')
option('package_tgz', type: 'boolean', value: false, description: 'Keep TGZ packaging support declared in the build metadata')
option('install_default_services', type: 'boolean', value: true, description: 'Install default service specifications')
option('build_docs', type: 'boolean', value: false, description: 'Build documentation with Doxygen/Sphinx')
option('install_docs', type: 'boolean', value: false, description: 'Build and install documentation')
option('client_side_only', type: 'boolean', value: false, description: 'Build and install client-side tools only')
option('config_format', type: 'combo', choices: ['json', 'conf'], value: 'json', description: 'Config format to install')
